[gd_scene load_steps=54 format=3 uid="uid://owdfvvvn7ja3"]

[ext_resource type="PackedScene" uid="uid://d1loimaxqs6y6" path="res://Instances/Components/LookAtPlayerComponent/LookAtPlayerComponent.tscn" id="1_4mr3o"]
[ext_resource type="Script" path="res://Instances/Enemies/BossOrc/BossOrc.gd" id="1_38hcy"]
[ext_resource type="Texture2D" uid="uid://cn61j0eedmjw0" path="res://Instances/Enemies/BossOrc/boss-orc.png" id="2_td053"]
[ext_resource type="AudioStream" uid="uid://b55qulyblut5q" path="res://Assets/Audios/Boss-Rage.mp3" id="3_7l1vd"]
[ext_resource type="PackedScene" uid="uid://b4asjdyoyep5s" path="res://Instances/Components/Health/Health.tscn" id="3_uvpwl"]
[ext_resource type="PackedScene" path="res://Instances/Components/ActiveHandleComponent/ActiveHandleComponent.tscn" id="4_c4ky7"]
[ext_resource type="Shader" path="res://Scripts/Shaders/Flash.gdshader" id="4_g4uk6"]
[ext_resource type="PackedScene" uid="uid://6fcg84clxst2" path="res://Instances/Components/Death/DeathManager.tscn" id="5_47m65"]
[ext_resource type="PackedScene" uid="uid://bjwrgsdbjvqw3" path="res://Instances/Components/DeathEffect/DeathExplosion.tscn" id="6_wg2kf"]
[ext_resource type="PackedScene" uid="uid://cwyxu1ysjtku7" path="res://Instances/Components/DropXp/DropXp.tscn" id="7_5ok6n"]
[ext_resource type="AudioStream" uid="uid://hhj8od3wlwnn" path="res://Instances/Enemies/Audio/enemyHit.ogg" id="7_kgjiu"]
[ext_resource type="PackedScene" uid="uid://wwc5nmv5yn2j" path="res://Instances/Components/AttackManager/AttackManager.tscn" id="7_qdm3p"]
[ext_resource type="PackedScene" uid="uid://c6sck5smlg7pc" path="res://Instances/AttackPaterns/CirclePatern/CirclePatern.tscn" id="8_afanf"]
[ext_resource type="PackedScene" uid="uid://bs5y7eh8kgpuo" path="res://Instances/AttackPaterns/ArcPatern/ArcPatern.tscn" id="8_ts25e"]
[ext_resource type="PackedScene" uid="uid://b4enx6olclngm" path="res://Instances/Components/FlashHit/FlashHit.tscn" id="8_w2yds"]
[ext_resource type="PackedScene" uid="uid://dx8h735nl0e2d" path="res://Instances/Components/Move/Move.tscn" id="9_4wogm"]
[ext_resource type="PackedScene" uid="uid://bjsnss7q14dlj" path="res://Instances/Components/SpawnerDamagePopup/SpawnerDamagePopup.tscn" id="10_3oewy"]
[ext_resource type="PackedScene" uid="uid://de18hnbsclqlr" path="res://Instances/AttackPaterns/EspiralPatern/EspiralPatern.tscn" id="10_7ujot"]
[ext_resource type="PackedScene" uid="uid://c1sky0kyn05tc" path="res://Instances/Components/PlayerTracker/PlayerTracker.tscn" id="10_q78kx"]
[ext_resource type="PackedScene" uid="uid://ca6aeltom7e7y" path="res://Instances/Components/ShooterComponent/ShooterComponent.tscn" id="11_gefv3"]
[ext_resource type="PackedScene" uid="uid://8mpq1pm143kp" path="res://Instances/Components/HealthBar/HealthBar.tscn" id="12_cp5v3"]
[ext_resource type="Resource" uid="uid://dush0xum1pf7q" path="res://Instances/Resources/Bullets/BulletE3.tres" id="14_yo50b"]
[ext_resource type="AudioStream" uid="uid://dmup1gun0pjth" path="res://Instances/Enemies/Audio/Explosion_04.mp3" id="17_fge52"]
[ext_resource type="Script" path="res://Scripts/LineTrail.gd" id="25_33vr0"]
[ext_resource type="Texture2D" uid="uid://jjjmenug6gvc" path="res://Instances/Enemies/BossOrc/burning_loop_5.png" id="25_t8sfh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nmnha"]

[sub_resource type="Curve" id="Curve_qojjg"]
_data = [Vector2(0.0125, 0), 0.0, 0.0, 0, 0, Vector2(0.2125, 0.68421), 1.77778, 1.77778, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ldir8"]
_data = [Vector2(0, 0.0105263), 0.0, 0.0, 0, 0, Vector2(0.21875, 0.505263), 2.48622, 2.48622, 0, 0, Vector2(0.9875, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wa0hw"]
resource_local_to_scene = true
shader = ExtResource("4_g4uk6")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ivax6"]
atlas = ExtResource("2_td053")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0lvh"]
atlas = ExtResource("2_td053")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_co4w2"]
atlas = ExtResource("2_td053")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn2ja"]
atlas = ExtResource("2_td053")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_84p3y"]
atlas = ExtResource("2_td053")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14wtn"]
atlas = ExtResource("2_td053")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_07xq1"]
atlas = ExtResource("2_td053")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n0kv"]
atlas = ExtResource("2_td053")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bxi7d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivax6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0lvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co4w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn2ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84p3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14wtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07xq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n0kv")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_orjvj"]
atlas = ExtResource("25_t8sfh")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy4b8"]
atlas = ExtResource("25_t8sfh")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bry6x"]
atlas = ExtResource("25_t8sfh")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcfam"]
atlas = ExtResource("25_t8sfh")
region = Rect2(24, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_rckoi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_orjvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy4b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bry6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcfam")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_jfxax"]
offsets = PackedFloat32Array(0, 0.206612, 0.528926, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.505344, 0.505344, 0.505344, 1, 0.237539, 0.237539, 0.237539, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6ni8p"]
gradient = SubResource("Gradient_jfxax")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.858696, 0.798913)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5v3u6"]
size = Vector2(20, 26)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6synx"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
border_width_left = 30
border_width_top = 30
border_width_right = 30
border_width_bottom = 30
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsy0i"]
bg_color = Color(0.584314, 0.584314, 0.584314, 1)
border_width_left = 30
border_width_top = 30
border_width_right = 30
border_width_bottom = 30
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="Animation" id="Animation_rurjw"]
resource_name = "Attack"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"AttackFinished"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GroupFlip/AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(0.5, 2, 2, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.354, 0.761), Vector2(0.8, 1.3), Vector2(1.2, 0.9), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GroupFlip/AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GroupFlip/AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(0.5, 2, 2, 0.5, 1),
"update": 0,
"values": [Vector2(1, -16), Vector2(1, -12), Vector2(1, -21), Vector2(1, -15), Vector2(1, -16)]
}

[sub_resource type="Animation" id="Animation_xodle"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GroupFlip/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(2, 2, 2),
"update": 0,
"values": [Vector2(1, -16), Vector2(1, -17), Vector2(1, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GroupFlip/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GroupFlip/AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_s47ol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GroupFlip/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GroupFlip/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GroupFlip/AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_y1p4g"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GroupFlip/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GroupFlip/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, 0.5, 0.5),
"update": 0,
"values": [0.0, 0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GroupFlip/AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grafs"]
_data = {
"Attack": SubResource("Animation_rurjw"),
"Idle": SubResource("Animation_xodle"),
"RESET": SubResource("Animation_s47ol"),
"Walk": SubResource("Animation_y1p4g")
}

[node name="BossOrc" type="CharacterBody2D" node_paths=PackedStringArray("moveComponent", "playerTracker", "healthManager", "shootManager", "flashHit", "attackManager", "itensRage")]
collision_layer = 0
collision_mask = 32
script = ExtResource("1_38hcy")
moveComponent = NodePath("Move")
playerTracker = NodePath("PlayerTracker")
healthManager = NodePath("Health")
shootManager = NodePath("ShooterComponent")
flashHit = NodePath("FlashHit")
attackManager = NodePath("AttackManager")
itensRage = [NodePath("GroupFlip/AnimatedSprite2D/Eye"), NodePath("RageLine1"), NodePath("RageLine2"), NodePath("GroupFlip/AnimatedSprite2D/Eye2"), NodePath("GroupFlip/PointLight2D")]
lifeBase = 1500.0
audioRage = ExtResource("3_7l1vd")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, -10)
shape = SubResource("CircleShape2D_nmnha")

[node name="RageLine1" type="Line2D" parent="." node_paths=PackedStringArray("targetToFollow")]
visible = false
z_index = 15
width = 1.0
width_curve = SubResource("Curve_qojjg")
default_color = Color(1, 0, 0, 1)
script = ExtResource("25_33vr0")
lenght = 20
targetToFollow = NodePath("../GroupFlip/AnimatedSprite2D/Eye")

[node name="RageLine2" type="Line2D" parent="." node_paths=PackedStringArray("targetToFollow")]
visible = false
z_index = 15
width = 1.0
width_curve = SubResource("Curve_ldir8")
default_color = Color(1, 0, 0, 1)
script = ExtResource("25_33vr0")
lenght = 20
targetToFollow = NodePath("../GroupFlip/AnimatedSprite2D/Eye2")

[node name="GroupFlip" type="Node2D" parent="."]

[node name="LookAtPlayerComponent" parent="GroupFlip" node_paths=PackedStringArray("playerTracker") instance=ExtResource("1_4mr3o")]
playerTracker = NodePath("../../PlayerTracker")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GroupFlip"]
material = SubResource("ShaderMaterial_wa0hw")
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_bxi7d")
animation = &"Idle"
frame = 7
frame_progress = 0.869444
flip_h = true

[node name="Eye" type="AnimatedSprite2D" parent="GroupFlip/AnimatedSprite2D"]
visible = false
modulate = Color(1, 0.129412, 0.2, 1)
position = Vector2(0, -4)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_rckoi")
autoplay = "default"
frame_progress = 0.752977
offset = Vector2(0, -2)

[node name="Eye2" type="AnimatedSprite2D" parent="GroupFlip/AnimatedSprite2D"]
visible = false
modulate = Color(1, 0.129412, 0.2, 1)
position = Vector2(-6, -4)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_rckoi")
autoplay = "default"
frame_progress = 0.59081
offset = Vector2(0, -2)

[node name="PointLight2D" type="PointLight2D" parent="GroupFlip"]
visible = false
position = Vector2(0, -9)
scale = Vector2(2.08026, 1.88008)
color = Color(1, 0, 0, 1)
energy = 1.4
shadow_enabled = true
shadow_filter_smooth = 20.3
texture = SubResource("GradientTexture2D_6ni8p")

[node name="Health" parent="." node_paths=PackedStringArray("deathManager", "flashHit", "lifeBar") instance=ExtResource("3_uvpwl")]
collision_layer = 8
collision_mask = 0
deathManager = NodePath("../DeathManager")
flashHit = NodePath("../FlashHit")
lifeBar = NodePath("../CanvasLayer/HealthBar")
hitAudio = ExtResource("7_kgjiu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_5v3u6")

[node name="SpawnerDamagePopup" parent="Health" instance=ExtResource("10_3oewy")]
position = Vector2(0, -24)

[node name="FlashHit" parent="." node_paths=PackedStringArray("animatedSprite") instance=ExtResource("8_w2yds")]
animatedSprite = NodePath("../GroupFlip/AnimatedSprite2D")

[node name="AttackManager" parent="." instance=ExtResource("7_qdm3p")]
pathsAttackPaterns = Array[NodePath]([NodePath("EspiralPatern"), NodePath("CirclePatern"), NodePath("ArcPatern")])

[node name="ArcPatern" parent="AttackManager" instance=ExtResource("8_ts25e")]
bullet = ExtResource("14_yo50b")

[node name="CirclePatern" parent="AttackManager" instance=ExtResource("8_afanf")]
bulletAmount = 50
bullet = ExtResource("14_yo50b")

[node name="EspiralPatern" parent="AttackManager" instance=ExtResource("10_7ujot")]
bulletAmount = 5
fireAmount = 15
delayBetweenFire = 0.1
bullet = ExtResource("14_yo50b")

[node name="ActiveHandleComponent" parent="." instance=ExtResource("4_c4ky7")]
activeOnLoad = true
switch_nps = Array[NodePath]([NodePath("../GroupFlip/LookAtPlayerComponent"), NodePath("../Health"), NodePath("../DeathManager"), NodePath("../DeathExplosion"), NodePath("../Move"), NodePath("../PlayerTracker")])

[node name="DeathManager" parent="." node_paths=PackedStringArray("activeHandle") instance=ExtResource("5_47m65")]
activeHandle = NodePath("../ActiveHandleComponent")
deathAudio = ExtResource("17_fge52")
switch_nps = Array[NodePath]([NodePath("../DeathExplosion"), NodePath("../DeathExplosion3"), NodePath("../DeathExplosion2")])

[node name="DeathExplosion" parent="." instance=ExtResource("6_wg2kf")]
position = Vector2(-8, -16)

[node name="DeathExplosion2" parent="." instance=ExtResource("6_wg2kf")]

[node name="DeathExplosion3" parent="." instance=ExtResource("6_wg2kf")]
position = Vector2(11, -19)

[node name="DropXp" parent="." instance=ExtResource("7_5ok6n")]

[node name="Move" parent="." instance=ExtResource("9_4wogm")]

[node name="PlayerTracker" parent="." instance=ExtResource("10_q78kx")]

[node name="ShooterComponent" parent="." instance=ExtResource("11_gefv3")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource("12_cp5v3")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 279.0
offset_top = 655.0
offset_right = 5849.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6synx")
theme_override_styles/fill = SubResource("StyleBoxFlat_rsy0i")
value = 90.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grafs")
}
